tooling/nargo_cli/tests/snapshots/execute__tests__closures_mut_ref_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "2248199242308264006",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/63OQQoAAAQEQMqD+IH/v0qKHMSFuWztYVuEgtBlp5F8I49b7N9o+T4xDikpe/QAAAA=",
  "debug_symbols": "TYzdCoMwDEbfJddeOMYm9FXGkP6kEihtSdvBKL67URS8y/kOOR0cmrbMFH0qoD4dQrK6UopCHcZjKlnHnUrVXEE93tMAGJ1c03MdwFNAUK9x/QoYphBome8ZmX+aSZuAJ/oW7c3Wf77M9Z85WXSNcS8dTvIb",
  "file_map": {
    "50": {
      "source": "fn main(mut x: Field) {\n    let one = 1;\n    let add1 = |z| { *z = *z + one; };\n\n    let two = 2;\n    let add2 = |z| { *z = *z + two; };\n\n    add1(&mut x);\n    assert(x == 1);\n\n    add2(&mut x);\n    assert(x == 3);\n\n    issue_2120();\n}\n// https://github.com/noir-lang/noir/issues/2120\nfn issue_2120() {\n    let x1 = &mut 42;\n    let set_x1 = |y| { *x1 = y; };\n\n    assert(*x1 == 42);\n    set_x1(44);\n    assert(*x1 == 44);\n    set_x1(*x1);\n    assert(*x1 == 44);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/closures_mut_ref/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
