tooling/nargo_cli/tests/snapshots/execute__tests__closures_mut_ref_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "13723070663392621056",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/8VUS47CMAx1f5rJMNWMZlixgQOwSFsQLFlwkQjUc3B0KLJVy3UrBLGwVLlRnOf3nNgJ9Jagz8UalJgDev+aVRGxvEp0yiimQe/Qp2w/iyjWibwx8fd+s3WKvoj8G4eYlvUhTAN8/4E4x0uPL7V0VuKavyE683n7vqH/L/HfiTMWd2tYe/+v8KdcM9S6EFpTVp9IPCquDRgXjZfcK2D4flKxR7FzoSU3qusfwwWRy/LN3KwulXqB4MMtU2Iorrv/Ff6XShzZDPo5ml/i69rtvad8GeIXMOTO8xcifonrL8Gf7ubwJM92F6q2CW3YhvN5cwry7jsb6ylt5iQj/q5lAtuuP+vwC+P9aJj3NJX3B4Z9L+tIPffIjKDYtdBVsDPWM4Jyvar7mdlYC93vmI1df1wBzO5NW50KAAA=",
  "debug_symbols": "tdXbioQwDAbgd+m1FzZJtfoqyzJ4qENBVDwsLOK7b110kE4ZCMPciJV8f6BEsoralMv9Zrumn0T+tYq2r4rZ9p07rVskytG2rb3frp9FvD8k/ddPQ9Htx2kuxlnkkiASpqvdmyLnG9sakat4i55Kk/SoTNW18DsSUn0uOglGP4BM0RcpW2i2yLgC4pAAiA8BCL6QbAFsgWxBXIHBHgjyEAj+XSGxhWKLhC2Cc4VanyLTr4ec1BlOSeyH60+GZ6xwJyg4rSQfPcDvQZItgC2QLYKTRHD+p4RvXCspVvgugkP3skfKFpotMp7Y3OmnGG1RtubYOs3SVZclNP8OxttHw9hXpl5Gs2+my1LaBw2SCKWLddF/",
  "file_map": {
    "50": {
      "source": "fn main(mut x: Field) {\n    let one = 1;\n    let add1 = |z| { *z = *z + one; };\n\n    let two = 2;\n    let add2 = |z| { *z = *z + two; };\n\n    add1(&mut x);\n    assert(x == 1);\n\n    add2(&mut x);\n    assert(x == 3);\n\n    issue_2120();\n}\n// https://github.com/noir-lang/noir/issues/2120\nfn issue_2120() {\n    let x1 = &mut 42;\n    let set_x1 = |y| { *x1 = y; };\n\n    assert(*x1 == 42);\n    set_x1(44);\n    assert(*x1 == 44);\n    set_x1(*x1);\n    assert(*x1 == 44);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/closures_mut_ref/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
