tooling/nargo_cli/tests/snapshots/execute__tests__closures_mut_ref_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "13723070663392621056",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUSQ7CMAx0N0EovbBc4BOu2qo99sBHIqq8I0+HSo5imcCBJpYqJ4oznplaycBHRrkUewjUzJRxW7QRsTBI9Fe4mjtlRTln50VEsUr0jYk/YT+ogL6I/DtFmCn9cZgJ8HFHOA/r8aWWNRra8xlyd/bv7wh+3dBaiTsp/m1C7/Ec4O961aT1KrTmzJ9IPFquDRiXEC95VsHn/OTizNVehJYyka8nhguiVw3+zSlt/P7jhOj6Ftb7wL0F0b8S9TfaH77omP/kaUbdmk4bPehl6Z9a+rQGn78XYLsV6KkGAAA=",
  "debug_symbols": "tZFBCoMwEEXvMussjDWm9SpSJOoogZBIjIUi3r1jkRJsN1l0M+SH//7mrdBju4yNtoOboapXMK5TQTtLad0YtF4bo8cm/oZsP7x49+dJ2T3OQfkAFS9yBmh7eomC+EEbhEpkG/uqlvJoShEX7wy4+N90+XP6A3B5ORMymbgmE7c0YqP0UF6r1uAhalhsF3kLzwlPCifvOuwXj7vMyCPdOucsL2mWpl8=",
  "file_map": {
    "50": {
      "source": "fn main(mut x: Field) {\n    let one = 1;\n    let add1 = |z| { *z = *z + one; };\n\n    let two = 2;\n    let add2 = |z| { *z = *z + two; };\n\n    add1(&mut x);\n    assert(x == 1);\n\n    add2(&mut x);\n    assert(x == 3);\n\n    issue_2120();\n}\n// https://github.com/noir-lang/noir/issues/2120\nfn issue_2120() {\n    let x1 = &mut 42;\n    let set_x1 = |y| { *x1 = y; };\n\n    assert(*x1 == 42);\n    set_x1(44);\n    assert(*x1 == 44);\n    set_x1(*x1);\n    assert(*x1 == 44);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/closures_mut_ref/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
